Adicionando filtros e outras coisas para ocProduct

--- a/templates/Estoque/produtoForm_ocProductForm.html.twig
+++ b/templates/Estoque/produtoForm_ocProductForm.html.twig
@@ -19,6 +19,9 @@
 {{ form_row(ocProductForm.model) }}
 {{ form_row(ocProductForm.manufacturerId) }}
 {{ form_row(ocProductForm.categoryId) }}
+
+{{ form_row(ocProductForm.filters) }}
+
 {{ form_row(ocProductForm.stockStatusId) }}
 {{ form_row(ocProductForm.price) }}
 {{ form_row(ocProductForm.quantity) }}
