--- a/templates/Estoque/produtoForm_ocProductForm.html.twig
+++ b/templates/Estoque/produtoForm_ocProductForm.html.twig
@@ -45,6 +45,18 @@
             <i class="fas fa-save" aria-hidden="true"></i> Salvar
         </button>
 
+        <button type="button" class="btn btn-secondary btn-lg" value="Atualizar fotos"
+                data-url="{{ url('est_produto_saveOcImages', {'produto': produto.id}) }}"
+                data-target="#confirmationModal" data-toggle="modal">
+            <i class="fas fa-camera"></i> Atualizar fotos
+        </button>
+
+        <button type="button" class="btn btn-secondary btn-lg" value="Corrigir nome e descrição"
+                data-url="{{ url('est_produto_corrigirOcNomeEDescricao', {'produto': produto.id}) }}"
+                data-target="#confirmationModal" data-toggle="modal">
+            <i class="fas fa-pencil-alt"></i> Corrigir nome e descrição
+        </button>
+
         <button type="button" value="Resetar" class="btn btn-secondary"
                 data-url="{{ url('est_produto_form') }}"
                 data-target="#confirmationModal" data-toggle="modal">
