Ativar/desativar oc_product

--- a/templates/Estoque/produtosOCCompare.html.twig
+++ b/templates/Estoque/produtosOCCompare.html.twig
@@ -66,11 +66,25 @@
                                             <i class="fas fa-sync"></i> Regerar
                                         </button>
 
-                                        <button type="button" class="btn btn-secondary" value="Regerar" title="Corrigir nomes e descrições"
+                                        <button type="button" class="btn btn-secondary" value="Corrigir nomes e descrições" title="Corrigir nomes e descrições"
                                                 data-url="{{ url('est_produtosOCCompare_corrigirNomesEDescricoes', {'fornecedor': fornecedor, 'subdepto': subdepto.subdepto.id}) }}"
                                                 data-target="#confirmationModal" data-toggle="modal">
                                             <i class="fas fa-pencil-alt"></i>
                                         </button>
+
+                                        <button type="button" class="btn btn-secondary" value="Ativar todos" title="Ativar todos"
+                                                data-url="{{ url('est_produtosOCCompare_ativarDesativar', {'fornecedor': fornecedor, 'subdepto': subdepto.subdepto.id, 'ativarDesativar': 1}) }}"
+                                                data-target="#confirmationModal" data-toggle="modal">
+                                            <i class="fas fa-play"></i>
+                                        </button>
+
+                                        <button type="button" class="btn btn-secondary" value="Desativar todos" title="Ativar todos"
+                                                data-url="{{ url('est_produtosOCCompare_ativarDesativar', {'fornecedor': fornecedor, 'subdepto': subdepto.subdepto.id, 'ativarDesativar': 0}) }}"
+                                                data-target="#confirmationModal" data-toggle="modal">
+                                            <i class="fas fa-pause"></i>
+                                        </button>
+
+
                                     </div>
 
                                 </td>
