--- a/templates/Estoque/produtosOCCompare.html.twig
+++ b/templates/Estoque/produtosOCCompare.html.twig
@@ -71,6 +71,12 @@
                                                 data-target="#confirmationModal" data-toggle="modal">
                                             <i class="fas fa-pencil-alt"></i>
                                         </button>
+
+                                        <button type="button" class="btn btn-secondary" value="Regerar" title="Salvar todas as imagens"
+                                                data-url="{{ url('est_produtosOCCompare_saveOcImagesBatch', {'fornecedor': fornecedor, 'subdepto': subdepto.subdepto.id}) }}"
+                                                data-target="#confirmationModal" data-toggle="modal">
+                                            <i class="fas fa-images"></i>
+                                        </button>
                                     </div>
 
                                 </td>
