Mais regras no confereEstoque e corrigirNCMs

--- a/templates/Estoque/confereEstoque.html.twig
+++ b/templates/Estoque/confereEstoque.html.twig
@@ -36,8 +36,8 @@
 
                         {% for r in rs %}
                             <tr>
-                                <td>{{ r.estProduto.reduzido }} - {{  r.estProduto.descricao }} ({{  r.estProduto.reduzidoEkt }})<br />
-                                    {{ r.estProduto.id }}</td>
+                                <td>{{ r.estProduto.reduzido }} - {{  r.estProduto.descricao }} (Reduzido: {{  r.estProduto.reduzidoEkt }})<br />
+                                    Id: {{ r.estProduto.id }}</td>
                                 <td class="text-right">
                                     <table style="width: 100%">
                                         <thead>
