--- a/templates/Financeiro/registroConferenciaForm.html.twig
+++ b/templates/Financeiro/registroConferenciaForm.html.twig
@@ -36,6 +36,12 @@
 					<i class="fas fa-save" aria-hidden="true"></i> Salvar
 				</button>
 
+				<button type="button" class="btn btn-outline-warning btn-lg" value="Gerar Próximo"
+						data-url="{{ url('fin_registroConferencia_gerarProximo', {id:e.id}) }}"
+						data-target="#confirmationModal" data-toggle="modal">
+					<i class="fas fa-wrench" aria-hidden="true"></i> Gerar Próximo
+				</button>
+
 				<button type="button" value="Resetar" class="btn btn-secondary"
 					data-url="{{ url('fin_registroConferencia_form') }}"
 					data-target="#confirmationModal" data-toggle="modal">
