--- a/templates/Financeiro/conferenciaFinanceiro.html.twig
+++ b/templates/Financeiro/conferenciaFinanceiro.html.twig
@@ -35,7 +35,9 @@
                                value="{{ filter.dtUtil.f|default('') }}">
 
                         <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                        <button class="btn btn-outline-dark" type="submit" name="btnMesAtual" id="btnMesAtual" value="true">Mês Atual</button>
+                        <button class="btn btn-outline-dark" type="submit" name="btnMesAtual" id="btnMesAtual"
+                                value="true">Mês Atual
+                        </button>
 
                     </div>
                 </div>
@@ -51,11 +53,23 @@
                         <h5 class="card-header">{{ list.titulo }}</h5>
                         <div class="card-body">
                             <table class="table table-striped table-hover display compact">
+
                                 {% for item in list.itens %}
-                                    <tr>
-                                        <td>{{ item.titulo }}</td>
-                                        <td class="text-right">{{ item.valor|number_format(2,',','.') }}</td>
-                                    </tr>
+
+                                    {% if item.titulo is defined %}
+                                        <tr>
+                                            <td>{{ item.titulo }}</td>
+                                            <td class="text-right">
+                                                {% if item.icon is defined %}
+                                                    <i class="{{ item.icon }}" title="{{ item.obs|default('') }}"></i>
+                                                {% endif %}
+                                                {{ item.valor|number_format(2,',','.') }}
+                                            </td>
+                                        </tr>
+                                    {% else %}
+                                        <tr style="background-color: lightblue"><td colspan="99"></td></tr>
+                                    {% endif %}
+
                                 {% endfor %}
 
                             </table>
