--- a/templates/Financeiro/movimentacaoImport.html.twig
+++ b/templates/Financeiro/movimentacaoImport.html.twig
@@ -72,6 +72,14 @@
                             </div>
                         </div>
 
+                        <div class="form-group row" id="usarCabecalhoRow">
+                            <label class="col-form-label col-sm-4 form-control-label required">Usar cabeçalho</label>
+                            <div class="col-sm-8">
+                                <input class="form-check-input" type="checkbox" id="usarCabecalho"
+                                       name="usarCabecalho" {{ usarCabecalho ? 'checked' : '' }}>
+                            </div>
+                        </div>
+
                         <div class="row">
                             <div class="col text-right">
                                 <button type="submit" class="btn btn-primary" value="Importar" name="btnImportar">
