mergeAll > refindAll + verificarImportadasAMais

--- a/templates/Financeiro/movimentacaoImport.html.twig
+++ b/templates/Financeiro/movimentacaoImport.html.twig
@@ -86,6 +86,10 @@
                                     <i class="fab fa-searchengin" aria-hidden="true"></i> Importar
                                 </button>
 
+                                <button type="submit" class="btn btn-outline-secondary" value="Verificar" name="btnVerificar">
+                                    <i class="fas fa-check-double" aria-hidden="true"></i> Verificar
+                                </button>
+
                                 <button type="submit" class="btn btn-secondary" value="Limpar" name="btnLimpar">
                                     <i class="fas fa-broom" aria-hidden="true"></i> Limpar
                                 </button>
